force-app/main/default/objects/Guias_de_Exportacion__c/fields/Agente__c.field-meta.xml
<CustomField>
    <fullName>Agente__c</fullName>
    <label>Agente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fedex</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>Nacional</fullName>
            </value>
            <value>
                <fullName>Hot Express</fullName>
            </value>
            <value>
                <fullName>Proyecto</fullName>
            </value>
            <value>
                <fullName>Servicio Carga</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>TNT Nacional</fullName>
            </value>
            <value>
                <fullName>FEDEX IPF</fullName>
            </value>
            <value>
                <fullName>MDZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>