force-app/main/default/objects/Guias_de_Exportacion__c/fields/Alto__c.field-meta.xml
<CustomField>
    <fullName>Alto__c</fullName>
    <label>Alto</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>