force-app/main/default/objects/Guias_de_Exportacion__c/fields/Ancho__c.field-meta.xml
<CustomField>
    <fullName>Ancho__c</fullName>
    <label>Ancho</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>