force-app/main/default/objects/Guias_de_Exportacion__c/fields/Breve_Descripcion_3__c.field-meta.xml
<CustomField>
    <fullName>Breve_Descripcion_3__c</fullName>
    <label>Breve Descripción 3</label>
    <length>90</length>
    <type>Text</type>
</CustomField>