force-app/main/default/objects/Guias_de_Exportacion__c/fields/Calle__c.field-meta.xml
<CustomField>
    <fullName>Calle__c</fullName>
    <formula>Direccion_Destinatario__r.Direccion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calle</label>
    <type>Text</type>
</CustomField>