force-app/main/default/objects/Guias_de_Exportacion__c/fields/Centro_de_Costo__c.field-meta.xml
<CustomField>
    <fullName>Centro_de_Costo__c</fullName>
    <label>Centro de Costo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>