force-app/main/default/objects/Guias_de_Exportacion__c/fields/Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Ciudad__c</fullName>
    <formula>Direccion_Destinatario__r.Ciudad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ciudad</label>
    <type>Text</type>
</CustomField>