force-app/main/default/objects/Guias_de_Exportacion__c/fields/Ciudad_Destinatario__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Destinatario__c</fullName>
    <label>Ciudad Destinatario</label>
    <length>15</length>
    <type>Text</type>
</CustomField>