force-app/main/default/objects/Guias_de_Exportacion__c/fields/Cod_Postal__c.field-meta.xml
<CustomField>
    <fullName>Cod_Postal__c</fullName>
    <formula>Direccion_Destinatario__r.Codigo_Postal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cod Postal</label>
    <type>Text</type>
</CustomField>