force-app/main/default/objects/Guias_de_Exportacion__c/fields/Cod_Postal_Destinatario__c.field-meta.xml
<CustomField>
    <fullName>Cod_Postal_Destinatario__c</fullName>
    <label>Cód Postal Destinatario</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>