force-app/main/default/objects/Guias_de_Exportacion__c/fields/Combustible__c.field-meta.xml
<CustomField>
    <fullName>Combustible__c</fullName>
    <label>% Combustible</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>