force-app/main/default/objects/Guias_de_Exportacion__c/fields/Comentario_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Comentario_Tracking__c</fullName>
    <label>Comentario Tracking</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>