force-app/main/default/objects/Guias_de_Exportacion__c/fields/Compania__c.field-meta.xml
<CustomField>
    <fullName>Compania__c</fullName>
    <label>Compañía</label>
    <length>30</length>
    <type>Text</type>
</CustomField>