force-app/main/default/objects/Guias_de_Exportacion__c/fields/Compania_Destinatario__c.field-meta.xml
<CustomField>
    <fullName>Compania_Destinatario__c</fullName>
    <label>Compañía Destinatario</label>
    <length>30</length>
    <type>Text</type>
</CustomField>