force-app/main/default/objects/Guias_de_Exportacion__c/fields/Contacto__c.field-meta.xml
<CustomField>
    <fullName>Contacto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.ID_Remitente__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Guías de Exportación</relationshipLabel>
    <relationshipName>Solicitudes_de_Pickup</relationshipName>
    <type>Lookup</type>
</CustomField>