force-app/main/default/objects/Guias_de_Exportacion__c/fields/Contacto_Destinatario__c.field-meta.xml
<CustomField>
    <fullName>Contacto_Destinatario__c</fullName>
    <label>Contacto Destinatario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>