force-app/main/default/objects/Guias_de_Exportacion__c/fields/Correo_Electronico__c.field-meta.xml
<CustomField>
    <fullName>Correo_Electronico__c</fullName>
    <label>Correo Electrónico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>