force-app/main/default/objects/Guias_de_Exportacion__c/fields/DDP__c.field-meta.xml
<CustomField>
    <fullName>DDP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DDP</label>
    <type>Checkbox</type>
</CustomField>