force-app/main/default/objects/Guias_de_Exportacion__c/fields/Direccion_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Contacto__c</fullName>
    <formula>Contacto__r.MailingStreet&amp;&quot; &quot;&amp; Contacto__r.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dirección Contacto</label>
    <type>Text</type>
</CustomField>