force-app/main/default/objects/Guias_de_Exportacion__c/fields/Direccion_Destinatario__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Destinatario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre Dirección</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Direcciones__c.Cuenta__c</field>
            <operation>equals</operation>
            <valueField>$Source.ID_Remitente__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Direcciones__c</referenceTo>
    <relationshipLabel>Guías de Exportación</relationshipLabel>
    <relationshipName>Solicitudes_de_Pickup</relationshipName>
    <type>Lookup</type>
</CustomField>