force-app/main/default/objects/Guias_de_Exportacion__c/fields/Divisa__c.field-meta.xml
<CustomField>
    <fullName>Divisa__c</fullName>
    <label>Divisa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
                <default>true</default>
                <label>USD - U.S. Dollar</label>
            </value>
            <value>
                <fullName>CLP</fullName>
                <label>CLP - Peso Chileno</label>
            </value>
            <value>
                <fullName>EUR</fullName>
                <label>EU - Euro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>