force-app/main/default/objects/Guias_de_Exportacion__c/fields/Documentos__c.field-meta.xml
<CustomField>
    <fullName>Documentos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentos</label>
    <type>Checkbox</type>
</CustomField>