force-app/main/default/objects/Guias_de_Exportacion__c/fields/Embalaje__c.field-meta.xml
<CustomField>
    <fullName>Embalaje__c</fullName>
    <label>Embalaje</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Su Embalaje</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>