force-app/main/default/objects/Guias_de_Exportacion__c/fields/Embalaje_HOT__c.field-meta.xml
<CustomField>
    <fullName>Embalaje_HOT__c</fullName>
    <label>Embalaje HOT</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_Contenido__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Sobre</fullName>
            </value>
            <value>
                <fullName>Pack</fullName>
            </value>
            <value>
                <fullName>Cajas</fullName>
            </value>
            <value>
                <fullName>Pallet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>