force-app/main/default/objects/Guias_de_Exportacion__c/fields/EmbalajeSustentable__c.field-meta.xml
<CustomField>
    <fullName>EmbalajeSustentable__c</fullName>
    <label>Embalaje Sustentable</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Embalaje_HOT__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>