force-app/main/default/objects/Guias_de_Exportacion__c/fields/Entregado_al_Agente__c.field-meta.xml
<CustomField>
    <fullName>Entregado_al_Agente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entregado al Agente</label>
    <type>Checkbox</type>
</CustomField>