force-app/main/default/objects/Guias_de_Exportacion__c/fields/Envio_Particular_a_Particular__c.field-meta.xml
<CustomField>
    <fullName>Envio_Particular_a_Particular__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envió Particular a Particular</label>
    <type>Checkbox</type>
</CustomField>