force-app/main/default/objects/Guias_de_Exportacion__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ingresado</fullName>
                <default>true</default>
                <label>Ingresado</label>
            </value>
            <value>
                <fullName>En Proceso</fullName>
            </value>
            <value>
                <fullName>Despachado</fullName>
            </value>
            <value>
                <fullName>Retenido</fullName>
            </value>
            <value>
                <fullName>Entregado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>