force-app/main/default/objects/Guias_de_Exportacion__c/fields/Estado_Guia__c.field-meta.xml
<CustomField>
    <fullName>Estado_Guia__c</fullName>
    <label>Estado Guía</label>
    <length>255</length>
    <type>Text</type>
</CustomField>