force-app/main/default/objects/Guias_de_Exportacion__c/fields/Estado_Provincia_Destinatario__c.field-meta.xml
<CustomField>
    <fullName>Estado_Provincia_Destinatario__c</fullName>
    <label>Estado/ Provincia Destinatario</label>
    <length>15</length>
    <type>Text</type>
</CustomField>