force-app/main/default/objects/Guias_de_Exportacion__c/fields/Factura_Agente__c.field-meta.xml
<CustomField>
    <fullName>Factura_Agente__c</fullName>
    <label>Factura Agente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>