force-app/main/default/objects/Guias_de_Exportacion__c/fields/Facturar_Aranceles_e_impuestos_a__c.field-meta.xml
<CustomField>
    <fullName>Facturar_Aranceles_e_impuestos_a__c</fullName>
    <label>Facturar Aranceles e impuestos a</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Remitente</fullName>
            </value>
            <value>
                <fullName>Destinatario</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>