force-app/main/default/objects/Guias_de_Exportacion__c/fields/Facturar_envio_a__c.field-meta.xml
<CustomField>
    <fullName>Facturar_envio_a__c</fullName>
    <label>Facturar envío a</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Remitente</fullName>
            </value>
            <value>
                <fullName>Hot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>