force-app/main/default/objects/Guias_de_Exportacion__c/fields/Fecha_de_Envio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Envio__c</fullName>
    <label>Fecha de Envío</label>
    <type>Date</type>
</CustomField>