force-app/main/default/objects/Guias_de_Exportacion__c/fields/Fecha_Ultimo_Estado__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ultimo_Estado__c</fullName>
    <label>Fecha Último Estado</label>
    <type>Date</type>
</CustomField>