force-app/main/default/objects/Guias_de_Exportacion__c/fields/FrxTaxID__c.field-meta.xml
<CustomField>
    <fullName>FrxTaxID__c</fullName>
    <formula>Direccion_Destinatario__r.Tax_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax ID</label>
    <type>Text</type>
</CustomField>