force-app/main/default/objects/Guias_de_Exportacion__c/fields/Guia_Portal__c.field-meta.xml
<CustomField>
    <fullName>Guia_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guía Portal</label>
    <type>Checkbox</type>
</CustomField>