force-app/main/default/objects/Guias_de_Exportacion__c/fields/ID_de_Destinatario__c.field-meta.xml
<CustomField>
    <fullName>ID_de_Destinatario__c</fullName>
    <label>ID de Destinatario</label>
    <length>30</length>
    <type>Text</type>
</CustomField>