force-app/main/default/objects/Guias_de_Exportacion__c/fields/ID_Remitente__c.field-meta.xml
<CustomField>
    <fullName>ID_Remitente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ID Remitente</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Solicitudes_de_Pickup</relationshipName>
    <type>Lookup</type>
</CustomField>