force-app/main/default/objects/Guias_de_Exportacion__c/fields/Largo__c.field-meta.xml
<CustomField>
    <fullName>Largo__c</fullName>
    <label>Largo</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>