force-app/main/default/objects/Guias_de_Exportacion__c/fields/Mercancia__c.field-meta.xml
<CustomField>
    <fullName>Mercancia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mercancía</label>
    <type>Checkbox</type>
</CustomField>