force-app/main/default/objects/Guias_de_Exportacion__c/fields/N_Cuenta_Fedex__c.field-meta.xml
<CustomField>
    <fullName>N_Cuenta_Fedex__c</fullName>
    <label>Nº Cuenta Fedex</label>
    <length>15</length>
    <type>Text</type>
</CustomField>