force-app/main/default/objects/Guias_de_Exportacion__c/fields/N_de_Cuenta_1__c.field-meta.xml
<CustomField>
    <fullName>N_de_Cuenta_1__c</fullName>
    <label>Nº de Cuenta 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>