force-app/main/default/objects/Guias_de_Exportacion__c/fields/N_de_Guia__c.field-meta.xml
<CustomField>
    <fullName>N_de_Guia__c</fullName>
    <label>Etiqueta Agente</label>
    <length>25</length>
    <type>Text</type>
</CustomField>