force-app/main/default/objects/Guias_de_Exportacion__c/fields/Numero_de_IVA_ID_WIN_Aduanal__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_IVA_ID_WIN_Aduanal__c</fullName>
    <label>Número de IVA/ID/WIN Aduanal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>