force-app/main/default/objects/Guias_de_Exportacion__c/fields/Otra_Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Otra_Ciudad__c</fullName>
    <formula>Otro_Remitente__r.Ciudad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Otra Ciudad</label>
    <type>Text</type>
</CustomField>