force-app/main/default/objects/Guias_de_Exportacion__c/fields/Otra_Direcci_n__c.field-meta.xml
<CustomField>
    <fullName>Otra_Direcci_n__c</fullName>
    <formula>Otro_Remitente__r.Direccion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Otra Dirección</label>
    <type>Text</type>
</CustomField>