force-app/main/default/objects/Guias_de_Exportacion__c/fields/Otro_Remitente__c.field-meta.xml
<CustomField>
    <fullName>Otro_Remitente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Otro Remitente</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Direcciones__c.Cuenta__c</field>
            <operation>equals</operation>
            <valueField>$Source.ID_Remitente__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Direcciones__c</referenceTo>
    <relationshipLabel>Guías de Exportación (Otra Dirección Remitente)</relationshipLabel>
    <relationshipName>Gu_as_de_Exportaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>