force-app/main/default/objects/Guias_de_Exportacion__c/fields/OtroPais__c.field-meta.xml
<CustomField>
    <fullName>OtroPais__c</fullName>
    <formula>Otro_Remitente__r.Pais__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Otro País</label>
    <type>Text</type>
</CustomField>