force-app/main/default/objects/Guias_de_Exportacion__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <formula>Direccion_Destinatario__r.Pais__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>País</label>
    <type>Text</type>
</CustomField>