force-app/main/default/objects/Guias_de_Exportacion__c/fields/Pais_Territorio_Destinatario__c.field-meta.xml
<CustomField>
    <fullName>Pais_Territorio_Destinatario__c</fullName>
    <label>País/ Territorio Destinatario</label>
    <length>15</length>
    <type>Text</type>
</CustomField>