force-app/main/default/objects/Guias_de_Exportacion__c/fields/Paquetes__c.field-meta.xml
<CustomField>
    <fullName>Paquetes__c</fullName>
    <label>Piezas</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>