force-app/main/default/objects/Guias_de_Exportacion__c/fields/Peso_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Peso_Cliente__c</fullName>
    <label>Peso Cliente</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>