force-app/main/default/objects/Guias_de_Exportacion__c/fields/POD_Fecha_Hora__c.field-meta.xml
<CustomField>
    <fullName>POD_Fecha_Hora__c</fullName>
    <label>POD Fecha/Hora</label>
    <type>DateTime</type>
</CustomField>