force-app/main/default/objects/Guias_de_Exportacion__c/fields/POD_Nombre__c.field-meta.xml
<CustomField>
    <fullName>POD_Nombre__c</fullName>
    <label>POD Nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>