force-app/main/default/objects/Guias_de_Exportacion__c/fields/Proposito_del_Envio__c.field-meta.xml
<CustomField>
    <fullName>Proposito_del_Envio__c</fullName>
    <label>Propósito del Envío</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Efectos Personales</fullName>
            </value>
            <value>
                <fullName>Documento</fullName>
            </value>
            <value>
                <fullName>Muestra</fullName>
            </value>
            <value>
                <fullName>No Vendido</fullName>
            </value>
            <value>
                <fullName>Regalo</fullName>
            </value>
            <value>
                <fullName>Reparar y Devolver</fullName>
            </value>
            <value>
                <fullName>Vendido</fullName>
            </value>
            <value>
                <fullName>Muestra sin valor Comercial</fullName>
            </value>
            <value>
                <fullName>Regalo a China</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>