force-app/main/default/objects/Guias_de_Exportacion__c/fields/Propuesta_Relacionada__c.field-meta.xml
<CustomField>
    <fullName>Propuesta_Relacionada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propuesta Relacionada</label>
    <referenceTo>Propuesta__c</referenceTo>
    <relationshipLabel>Guías de Exportación</relationshipLabel>
    <relationshipName>Gu_as_de_Exportaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>