force-app/main/default/objects/Guias_de_Exportacion__c/fields/Proveedor_en_Origen__c.field-meta.xml
<CustomField>
    <fullName>Proveedor_en_Origen__c</fullName>
    <label>Proveedor en Origen</label>
    <length>30</length>
    <type>Text</type>
</CustomField>