force-app/main/default/objects/Guias_de_Exportacion__c/fields/Referencia_del_Envio__c.field-meta.xml
<CustomField>
    <fullName>Referencia_del_Envio__c</fullName>
    <label>Referencia del Envío</label>
    <length>20</length>
    <type>Text</type>
</CustomField>