force-app/main/default/objects/Guias_de_Exportacion__c/fields/Retirado_por__c.field-meta.xml
<CustomField>
    <fullName>Retirado_por__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retirado por</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Gu_as_de_Exportaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>