force-app/main/default/objects/Guias_de_Exportacion__c/fields/Seguro__c.field-meta.xml
<CustomField>
    <fullName>Seguro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seguro</label>
    <type>Checkbox</type>
</CustomField>