force-app/main/default/objects/Guias_de_Exportacion__c/fields/Servicio__c.field-meta.xml
<CustomField>
    <fullName>Servicio__c</fullName>
    <label>Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>International Priority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>