force-app/main/default/objects/Guias_de_Exportacion__c/fields/Shipper_Original__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Original__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipper Original</label>
    <type>Checkbox</type>
</CustomField>