force-app/main/default/objects/Guias_de_Exportacion__c/fields/Solicitud_de_Retiro__c.field-meta.xml
<CustomField>
    <fullName>Solicitud_de_Retiro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solicitud de Retiro</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Solicitud_de_Retiro__c.Cuenta__c</field>
            <operation>equals</operation>
            <valueField>$Source.ID_Remitente__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Solicitud_de_Retiro__c</referenceTo>
    <relationshipLabel>Guías de Exportación</relationshipLabel>
    <relationshipName>Gu_as_de_Exportaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>