force-app/main/default/objects/Guias_de_Exportacion__c/fields/Tarifa_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Tarifa_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tarifa Cliente</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Detalle_Tarifa__c.Tarifa__r.Tipo_Tarifa__c</field>
            <operation>equals</operation>
            <value>Exportación</value>
        </filterItems>
        <filterItems>
            <field>Detalle_Tarifa__c.Embalaje__c</field>
            <operation>equals</operation>
            <valueField>$Source.Embalaje_HOT__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Detalle_Tarifa__c</referenceTo>
    <relationshipLabel>Guías de Exportación</relationshipLabel>
    <relationshipName>Gu_as_de_Exportaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>