force-app/main/default/objects/Guias_de_Exportacion__c/fields/Telefono__c.field-meta.xml
<CustomField>
    <fullName>Telefono__c</fullName>
    <formula>Contacto__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Teléfono</label>
    <type>Text</type>
</CustomField>