force-app/main/default/objects/Guias_de_Exportacion__c/fields/Telefono_Destinatario__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Destinatario__c</fullName>
    <label>Teléfono Destinatario</label>
    <type>Phone</type>
</CustomField>