force-app/main/default/objects/Guias_de_Exportacion__c/fields/Tipo_Contenido__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Contenido__c</fullName>
    <label>Tipo Contenido</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Documentos</fullName>
            </value>
            <value>
                <fullName>Muestra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>