force-app/main/default/objects/Guias_de_Exportacion__c/fields/Total_Costos_Agente__c.field-meta.xml
<CustomField>
    <fullName>Total_Costos_Agente__c</fullName>
    <label>Total Costos Agente</label>
    <summarizedField>Costo_Agente_Exportacion__c.Valor__c</summarizedField>
    <summaryForeignKey>Costo_Agente_Exportacion__c.Guias_de_Exportacion__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>