force-app/main/default/objects/Guias_de_Exportacion__c/fields/Total_Costos_Facturados__c.field-meta.xml
<CustomField>
    <fullName>Total_Costos_Facturados__c</fullName>
    <label>Total Costos Facturados</label>
    <summarizedField>Costo_de_Exportacion__c.Valor__c</summarizedField>
    <summaryFilterItems>
        <field>Costo_de_Exportacion__c.Estado__c</field>
        <operation>equals</operation>
        <value>Facturado</value>
    </summaryFilterItems>
    <summaryForeignKey>Costo_de_Exportacion__c.Guias_de_Exportacion__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>