force-app/main/default/objects/Guias_de_Exportacion__c/fields/Unidad_de_Medida__c.field-meta.xml
<CustomField>
    <fullName>Unidad_de_Medida__c</fullName>
    <label>Unidad de Medida</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kilogramos</fullName>
            </value>
            <value>
                <fullName>Libras</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>