force-app/main/default/objects/Guias_de_Exportacion__c/fields/Validado_por_Area_de_Finanzas__c.field-meta.xml
<CustomField>
    <fullName>Validado_por_Area_de_Finanzas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validado por Área de Finanzas</label>
    <type>Checkbox</type>
</CustomField>