force-app/main/default/objects/Guias_de_Exportacion__c/fields/Valor_Agente__c.field-meta.xml
<CustomField>
    <fullName>Valor_Agente__c</fullName>
    <formula>Tarifa_Agente__r.Valor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Agente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>