force-app/main/default/objects/Guias_de_Exportacion__c/fields/Valor_Combustible__c.field-meta.xml
<CustomField>
    <fullName>Valor_Combustible__c</fullName>
    <formula>Valor_Cliente__c * Combustible__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Combustible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>