force-app/main/default/objects/Guias_de_Exportacion__c/fields/Valor_de_Transporte__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_Transporte__c</fullName>
    <label>Valor de Transporte</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>