force-app/main/default/objects/Guias_de_Exportacion__c/fields/Valor_Paquete__c.field-meta.xml
<CustomField>
    <fullName>Valor_Paquete__c</fullName>
    <label>Valor Paquete</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>