force-app/main/default/objects/Guias_de_Exportacion__c/fields/Valor_Total_del_Contenido__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_del_Contenido__c</fullName>
    <label>Valor Total del Contenido</label>
    <summarizedField>Contenido_Envio__c.Total__c</summarizedField>
    <summaryForeignKey>Contenido_Envio__c.Pickup__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>