force-app/main/default/objects/Guias_de_Exportacion__c/fields/ViaEntrega__c.field-meta.xml
<CustomField>
    <fullName>ViaEntrega__c</fullName>
    <label>Vía Entrega</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Agente__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>HOT Express</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>