force-app/main/default/objects/Guias_de_Exportacion__c/fields/Zona_DHL__c.field-meta.xml
<CustomField>
    <fullName>Zona_DHL__c</fullName>
    <formula>text(Direccion_Destinatario__r.Pais__r.Zona_DHL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zona DHL</label>
    <type>Text</type>
</CustomField>